Bug 107895 - [Gemini Lake] HDMI 2.0 compliance test failed - HF1-12 TMDS Protocol- 6G- Basic Protocol and Scrambling
Summary: [Gemini Lake] HDMI 2.0 compliance test failed - HF1-12 TMDS Protocol- 6G- Bas...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Clinton Taylor
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: Triaged, ReadyForDev
Keywords:
Depends on:
Blocks: 107905
  Show dependency treegraph
 
Reported: 2018-09-11 03:26 UTC by JingWu Lin
Modified: 2018-12-28 12:21 UTC (History)
2 users (show)

See Also:
i915 platform: GLK
i915 features: display/HDMI


Attachments
HF1-12 FAILED (10.19 KB, image/jpeg)
2018-09-11 03:26 UTC, JingWu Lin
no flags Details
kernel log (2.59 MB, text/plain)
2018-09-14 05:56 UTC, JingWu Lin
no flags Details

Description JingWu Lin 2018-09-11 03:26:59 UTC
Created attachment 141515 [details]
HF1-12 FAILED

GKL fails HDMI 2.0 compliance test HF1-12 TMDS Protocol- 6G- Basic Protocol and Scrambling.

From MOI_CTS2.0u (HDMI2.0 certification rule), if more than one or no unscrambled control period per field exists than fail.
The HDMI analyzer detects 6.
Comment 1 Lakshmi 2018-09-11 06:31:18 UTC
Please try to reproduce the error using drm-tip (https://cgit.freedesktop.org/drm-tip) and kernel parameters drm.debug=0x1e log_buf_len=4M, and if the problem persists attach the full dmesg from boot.
Comment 2 JingWu Lin 2018-09-14 05:56:03 UTC
Created attachment 141555 [details]
kernel log

board: GLK RVP
kernel: Linux version 4.19.0-rc2-drm-tip-2018y-09m-04d+
Comment 3 Lakshmi 2018-09-14 10:08:47 UTC
Priority is set to Highest as this is blocking the customer to pass GKL devices as they are lacking the logo/sticker (Compliance test - pass certificate).
Comment 4 Clinton Taylor 2018-10-05 18:02:31 UTC
See patch from https://bugs.freedesktop.org/show_bug.cgi?id=107896
Comment 5 Clinton Taylor 2018-10-12 21:11:22 UTC
Updated patch V2 to Intel-gfx mailing list
Comment 6 Clinton Taylor 2018-10-23 19:03:24 UTC
new patch attached to 107896 to resolve both issues.
Comment 7 Lakshmi 2018-11-05 08:50:55 UTC
Update: This bug is not blocking anymore to the reporter. Testing is in progress, will take 1~2 weeks for the test results. Reducing the priority to High and status can be updated once the feedback is received.
Comment 8 Clinton Taylor 2018-12-10 18:23:04 UTC
Feedback was not really received. Based on initial feedback and in house testing patch will be pushed upstream.
Comment 9 James Ausmus 2018-12-11 17:34:51 UTC
Patch pushed to dinq
Comment 10 Francesco Balestrieri 2018-12-28 09:22:19 UTC
JingWu Lin, do you confirm that the issue is resolved?


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.